syntax = 'proto3';
package com.linkedin.venice.protocols.controller;


import "controller/ControllerGrpcRequestContext.proto";

option java_multiple_files = true;

service StoreGrpcService {
  rpc updateAclForStore(UpdateAclForStoreGrpcRequest) returns (UpdateAclForStoreGrpcResponse);
  rpc getAclForStore(GetAclForStoreGrpcRequest) returns (GetAclForStoreGrpcResponse);
  rpc deleteAclForStore(DeleteAclForStoreGrpcRequest) returns (DeleteAclForStoreGrpcResponse);
}

message UpdateAclForStoreGrpcRequest {
  ClusterStoreGrpcInfo storeInfo = 1;
  string accessPermissions = 3;
}

message UpdateAclForStoreGrpcResponse {
  ClusterStoreGrpcInfo storeInfo = 1;
}

message GetAclForStoreGrpcRequest {
  ClusterStoreGrpcInfo storeInfo = 1;
}

message GetAclForStoreGrpcResponse {
  ClusterStoreGrpcInfo storeInfo = 1;
  string accessPermissions = 2;
}

message DeleteAclForStoreGrpcRequest {
  ClusterStoreGrpcInfo storeInfo = 1;
}

message DeleteAclForStoreGrpcResponse {
  ClusterStoreGrpcInfo storeInfo = 1;
}